apps/skein_compiler/test/skein/conformance/negative/string_concat_plus.skein
-- expect: E0020
-- #252: String + String type-checked then crashed at runtime. Arithmetic is
-- numeric-only; strings are built with interpolation.
module StringConcatPlus {
  fn join(a: String, b: String) -> String {
    a + b
  }
}
